[FIX] Class panel-nocolor is a fix for the case when panel margins and padding are needed but not visible backgrounds or borders.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/14.x@55048 b456876b-0849-0410-b77d-98878d47e9d5

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -3204,6 +3204,7 @@ body.tiki.navbar-padding {
 .panel-body ul.nav {
   overflow: visible;
 }
+.panel.panel-nocolor,
 .panel-nocolor,
 .panel-nocolor > .panel-heading,
 .panel-nocolor > .panel-body,
