--- a/themes/base_files/less/tiki-bootstrap_overrides.less
+++ b/themes/base_files/less/tiki-bootstrap_overrides.less
@@ -43,6 +43,7 @@ body.tiki.navbar-padding {
 	overflow: visible;
 }
 
+.panel.panel-nocolor,
 .panel-nocolor,
 .panel-nocolor > .panel-heading,
 .panel-nocolor > .panel-body,
